--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>WYNIKI</td><td id="TOTAL_C4"></td><td id="I_D4"></td><td id="II_E4"></td><td id="III_F4"></td></tr>
         <tr><td>OEE</td><td id="TOTAL_C6"></td><td id="I_D6"></td><td id="II_E6"></td><td id="III_F6"></td></tr>
         <tr><td>SCRAP</td><td id="TOTAL_C7"></td><td id="I_D7"></td><td id="II_E7"></td><td id="III_F7"></td></tr>
         <tr><td>WYDAJNOŚĆ</td><td id="TOTAL_C8"></td><td id="I_D8"></td><td id="II_E8"></td><td id="III_F8"></td></tr>
@@ -88,6 +87,9 @@
         <tr><td>ILOŚCI OK</td><td id="TOTAL_C12"></td><td id="I_D12"></td><td id="II_E12"></td><td id="III_F12"></td></tr>
         <tr><td>ILOŚCI NOK</td><td id="TOTAL_C13"></td><td id="I_D13"></td><td id="II_E13"></td><td id="III_F13"></td></tr>
       </tbody>
+      <tfoot>
+        <tr><td>WYNIKI</td><td id="TOTAL_C4"></td><td id="I_D4"></td><td id="II_E4"></td><td id="III_F4"></td></tr>
+      </tfoot>
     </table>
   </main>
 
