--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard OEE</title>
+  <title>     ****      Piasecki jest najlepszy         !!!     </title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
