--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>     ****      Piasecki jest najlepszy         !!!     </title>
+  <title>Dane z produkcji </title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -65,7 +65,7 @@
       </select>
       <button class="refresh-button" onclick="loadData()">Odśwież</button>
     </div>
-    <div>Dashboard OEE</div>
+    <div> *******    Piasecki jest najlepszy  **************</div>
   </header>
 
   <main>
