--- a/index.html
+++ b/index.html
@@ -6,64 +6,90 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
       background: #f4f4f4;
+      margin: 0;
+      padding: 20px;
       color: #333;
     }
+
     header {
-      background: #2c3e50;
-      color: white;
-      padding: 10px 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background: #2c3e50;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
     }
-    select, button {
+
+    select {
       padding: 8px;
       font-size: 16px;
       border-radius: 4px;
       border: none;
     }
+
     main {
-      display: flex;
-      justify-content: center;
       margin-top: 30px;
     }
+
     table {
+      width: 100%;
       border-collapse: collapse;
+      margin-bottom: 30px;
       background: white;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border-radius: 8px;
       overflow: hidden;
     }
+
     th, td {
-      padding: 12px 20px;
+      padding: 12px;
       border: 1px solid #ccc;
       text-align: center;
     }
+
     th {
       background: #3498db;
       color: white;
     }
-    .refresh-button {
-      background: #2ecc71;
-      color: white;
-      cursor: pointer;
-      margin-left: 10px;
+
+    .red {
+      color: red;
+    }
+
+    .time-grid {
+      display: grid;
+      grid-template-columns: 100px repeat(5, 1fr);
+      gap: 5px;
+      align-items: center;
+    }
+
+    .time-label {
+      font-weight: bold;
+      padding: 10px;
+    }
+
+    .time-cell {
+      background: #e0f7e9;
+      padding: 10px;
+      text-align: center;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      min-height: 30px;
     }
   </style>
 </head>
 <body>
+
   <header>
     <div>
-      <label for="lineSelect">Wybierz linię:</label>
-      <select id="lineSelect">
-        <option value="NHL">NHL</option>
-        <option value="MP4">MP4</option>
-        <option value="M4">M4</option>
+      <label for="shiftSelect">Zmiana:</label>
+      <select id="shiftSelect">
+        <option value="I">I</option>
+        <option value="II">II</option>
+        <option value="III">III</option>
       </select>
-      <button class="refresh-button" onclick="loadData()">Odśwież</button>
     </div>
     <div>**************   Piasecki jest najlepszy  **********************</div>
   </header>
@@ -72,54 +98,52 @@
     <table>
       <thead>
         <tr>
-          <th>WYNIKI</th>
-          <th>TOTAL</th>
+          <th>zm</th>
           <th>I</th>
           <th>II</th>
           <th>III</th>
+          <th>TOTAL suma</th>
         </tr>
       </thead>
       <tbody>
-        <tr><td>OEE</td><td id="TOTAL_C6"></td><td id="I_D6"></td><td id="II_E6"></td><td id="III_F6"></td></tr>
-        <tr><td>SCRAP</td><td id="TOTAL_C7"></td><td id="I_D7"></td><td id="II_E7"></td><td id="III_F7"></td></tr>
-        <tr><td>WYDAJNOŚĆ</td><td id="TOTAL_C8"></td><td id="I_D8"></td><td id="II_E8"></td><td id="III_F8"></td></tr>
-        <tr><td>DOSTĘPNOŚĆ</td><td id="TOTAL_C11"></td><td id="I_D11"></td><td id="II_E11"></td><td id="III_F11"></td></tr>
-        <tr><td>ILOŚCI OK</td><td id="TOTAL_C12"></td><td id="I_D12"></td><td id="II_E12"></td><td id="III_F12"></td></tr>
-        <tr><td>ILOŚCI NOK</td><td id="TOTAL_C13"></td><td id="I_D13"></td><td id="II_E13"></td><td id="III_F13"></td></tr>
+        <tr><td>OEE</td><td></td><td></td><td></td><td></td></tr>
+        <tr><td>OK</td><td></td><td></td><td></td><td></td></tr>
+        <tr><td class="red">NOK</td><td></td><td></td><td></td><td></td></tr>
       </tbody>
     </table>
+
+    <div class="time-grid">
+      <div class="time-label">6-7</div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+
+      <div class="time-label">7-8</div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+
+      <div class="time-label">8-9</div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+
+      <div class="time-label">9-10</div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+      <div class="time-cell"></div>
+
+      <!-- Dodaj więcej godzin według potrzeb -->
+    </div>
   </main>
 
-  <script>
-    const sheetId = "1gcWHcIZv7OMuU1bNNQ5P7XFLNpLoBsabXbG9hJImGpc";
-    const apiKey = "AIzaSyDl6HIz3qk94UeCo6sbKLO9TnTdEHRbvNQ";
-    const cells = [6, 7, 8, 11, 12, 13];
-
-    async function loadData() {
-      const sheet = document.getElementById("lineSelect").value;
-      for (let row of cells) {
-        for (let col of ['C', 'D', 'E', 'F']) {
-          const colLabel = { C: 'TOTAL', D: 'I', E: 'II', F: 'III' }[col];
-          const id = `${colLabel}_${col}${row}`;
-          const url = `https://sheets.googleapis.com/v4/spreadsheets/${sheetId}/values/${sheet}!${col}${row}?key=${apiKey}`;
-
-          try {
-            const response = await fetch(url);
-            const data = await response.json();
-            const value = (data.values && data.values[0][0]) || '-';
-            document.getElementById(id).textContent = value;
-          } catch (e) {
-            document.getElementById(id).textContent = 'Błąd';
-          }
-        }
-      }
-    }
-
-    // Odświeżanie co 5 minut
-    setInterval(loadData, 5 * 60 * 1000);
-
-    // Automatyczne ładowanie po starcie
-    window.onload = loadData;
-  </script>
 </body>
 </html>
