--- a/index.html
+++ b/index.html
@@ -7,45 +7,28 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #f4f4f4;
-      margin: 0;
       padding: 20px;
       color: #333;
     }
 
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: #2c3e50;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 8px;
-    }
-
-    select {
-      padding: 8px;
-      font-size: 16px;
-      border-radius: 4px;
-      border: none;
-    }
-
-    main {
-      margin-top: 30px;
+    .container {
+      max-width: 800px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
       margin-bottom: 30px;
-      background: white;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      border-radius: 8px;
-      overflow: hidden;
     }
 
     th, td {
-      padding: 12px;
       border: 1px solid #ccc;
+      padding: 12px;
       text-align: center;
     }
 
@@ -54,96 +37,128 @@
       color: white;
     }
 
+    .green {
+      color: green;
+      font-weight: bold;
+    }
+
     .red {
       color: red;
-    }
-
-    .time-grid {
-      display: grid;
-      grid-template-columns: 100px repeat(5, 1fr);
-      gap: 5px;
-      align-items: center;
-    }
-
-    .time-label {
       font-weight: bold;
-      padding: 10px;
     }
 
-    .time-cell {
+    select {
+      font-size: 16px;
+      padding: 6px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      color: green;
+      font-weight: bold;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    .grid-label {
+      grid-column: span 6;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    .cell {
       background: #e0f7e9;
+      border: 1px solid #ccc;
       padding: 10px;
       text-align: center;
       border-radius: 4px;
-      border: 1px solid #ccc;
       min-height: 30px;
     }
   </style>
 </head>
 <body>
-
-  <header>
-    <div>
-      <label for="shiftSelect">Zmiana:</label>
-      <select id="shiftSelect">
-        <option value="I">I</option>
-        <option value="II">II</option>
-        <option value="III">III</option>
-      </select>
-    </div>
-    <div>**************   Piasecki jest najlepszy  **********************</div>
-  </header>
-
-  <main>
+  <div class="container">
+    <!-- Nagłówek z listą rozwijaną -->
     <table>
-      <thead>
-        <tr>
-          <th>zm</th>
-          <th>I</th>
-          <th>II</th>
-          <th>III</th>
-          <th>TOTAL suma</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td>OEE</td><td></td><td></td><td></td><td></td></tr>
-        <tr><td>OK</td><td></td><td></td><td></td><td></td></tr>
-        <tr><td class="red">NOK</td><td></td><td></td><td></td><td></td></tr>
-      </tbody>
+      <tr>
+        <td></td>
+        <td colspan="4">
+          <select>
+            <option class="green">1</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td class="green">I</td>
+        <td class="green">II</td>
+        <td class="green">III</td>
+        <td><strong>TOTAL suma</strong></td>
+      </tr>
+      <tr>
+        <td><strong>zm</strong></td>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
+        <td>21</td>
+      </tr>
+      <tr>
+        <td><strong>OEE</strong></td>
+        <td>9</td>
+        <td>10</td>
+        <td>11</td>
+        <td>30</td>
+      </tr>
+      <tr>
+        <td><strong>OK</strong></td>
+        <td>12</td>
+        <td>13</td>
+        <td>14</td>
+        <td>39</td>
+      </tr>
+      <tr>
+        <td class="red">NOK</td>
+        <td>15</td>
+        <td>16</td>
+        <td>17</td>
+        <td>48</td>
+      </tr>
     </table>
 
-    <div class="time-grid">
-      <div class="time-label">6-7</div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-
-      <div class="time-label">7-8</div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-
-      <div class="time-label">8-9</div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-
-      <div class="time-label">9-10</div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-      <div class="time-cell"></div>
-
-      <!-- Dodaj więcej godzin według potrzeb -->
+    <!-- Siatka godzinowa 1 -->
+    <div class="grid-label">6-7</div>
+    <div class="grid">
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
     </div>
-  </main>
 
+    <div class="grid-label">7-8</div>
+    <div class="grid">
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+    </div>
+
+    <!-- Siatka godzinowa 2 -->
+    <div class="grid-label">22-23 do 05-06</div>
+    <div class="grid">
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+    </div>
+  </div>
 </body>
 </html>
