--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     .container {
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
       background: white;
       padding: 20px;
@@ -28,13 +28,8 @@
 
     th, td {
       border: 1px solid #ccc;
-      padding: 12px;
+      padding: 10px;
       text-align: center;
-    }
-
-    th {
-      background: #3498db;
-      color: white;
     }
 
     .green {
@@ -56,17 +51,16 @@
       font-weight: bold;
     }
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      gap: 10px;
-      margin-bottom: 20px;
+    .grid-label {
+      font-weight: bold;
+      margin: 10px 0 5px;
     }
 
-    .grid-label {
-      grid-column: span 6;
-      font-weight: bold;
-      margin-top: 10px;
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(8, 1fr);
+      gap: 5px;
+      margin-bottom: 20px;
     }
 
     .cell {
@@ -81,7 +75,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- Nagłówek z listą rozwijaną -->
+    <!-- Główna tabela -->
     <table>
       <tr>
         <td></td>
@@ -100,64 +94,59 @@
       </tr>
       <tr>
         <td><strong>zm</strong></td>
-        <td>6</td>
-        <td>7</td>
-        <td>8</td>
-        <td>21</td>
+        <td>3</td>
+        <td>4</td>
+        <td>5</td>
+        <td>suma</td>
       </tr>
       <tr>
         <td><strong>OEE</strong></td>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
         <td>9</td>
-        <td>10</td>
-        <td>11</td>
-        <td>30</td>
       </tr>
       <tr>
         <td><strong>OK</strong></td>
+        <td>10</td>
+        <td>11</td>
         <td>12</td>
         <td>13</td>
-        <td>14</td>
-        <td>39</td>
       </tr>
       <tr>
         <td class="red">NOK</td>
+        <td>14</td>
         <td>15</td>
         <td>16</td>
         <td>17</td>
-        <td>48</td>
       </tr>
     </table>
 
-    <!-- Siatka godzinowa 1 -->
-    <div class="grid-label">6-7</div>
+    <!-- Siatka godzinowa 6-14 -->
+    <div class="grid-label">6–14</div>
     <div class="grid">
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
     </div>
 
-    <div class="grid-label">7-8</div>
+    <!-- Siatka godzinowa 14–22 -->
+    <div class="grid-label">14–22</div>
     <div class="grid">
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
     </div>
 
-    <!-- Siatka godzinowa 2 -->
-    <div class="grid-label">22-23 do 05-06</div>
+    <!-- Siatka godzinowa 22–06 -->
+    <div class="grid-label">22–06</div>
     <div class="grid">
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
     </div>
   </div>
 </body>
