--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 
     .container {
-      max-width: 900px;
+      max-width: 1000px;
       margin: auto;
       background: white;
       padding: 20px;
@@ -33,8 +33,7 @@
     }
 
     .green {
-      color: green;
-      font-weight: bold;
+      background-color: #e0f7e9;
     }
 
     .red {
@@ -51,16 +50,21 @@
       font-weight: bold;
     }
 
-    .grid-label {
-      font-weight: bold;
-      margin: 10px 0 5px;
+    .time-block {
+      margin-bottom: 30px;
     }
 
-    .grid {
+    .time-header {
+      display: grid;
+      grid-template-columns: repeat(8, 1fr);
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    .time-grid {
       display: grid;
       grid-template-columns: repeat(8, 1fr);
       gap: 5px;
-      margin-bottom: 20px;
     }
 
     .cell {
@@ -78,7 +82,7 @@
     <!-- Główna tabela -->
     <table>
       <tr>
-        <td></td>
+        <td><strong>Lista rozwijana</strong></td>
         <td colspan="4">
           <select>
             <option class="green">1</option>
@@ -86,67 +90,60 @@
         </td>
       </tr>
       <tr>
-        <td></td>
+        <td><strong>DATA</strong></td>
         <td class="green">I</td>
         <td class="green">II</td>
         <td class="green">III</td>
-        <td><strong>TOTAL suma</strong></td>
-      </tr>
-      <tr>
-        <td><strong>zm</strong></td>
-        <td>3</td>
-        <td>4</td>
-        <td>5</td>
-        <td>suma</td>
+        <td><strong>TOTAL</strong></td>
       </tr>
       <tr>
         <td><strong>OEE</strong></td>
-        <td>6</td>
-        <td>7</td>
-        <td>8</td>
-        <td>9</td>
+        <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
       </tr>
       <tr>
         <td><strong>OK</strong></td>
-        <td>10</td>
-        <td>11</td>
-        <td>12</td>
-        <td>13</td>
+        <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
       </tr>
       <tr>
         <td class="red">NOK</td>
-        <td>14</td>
-        <td>15</td>
-        <td>16</td>
-        <td>17</td>
+        <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
       </tr>
     </table>
 
-    <!-- Siatka godzinowa 6-14 -->
-    <div class="grid-label">6–14</div>
-    <div class="grid">
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+    <!-- Blok godzinowy 6–14 -->
+    <div class="time-block">
+      <div class="time-header">
+        <div>6–7</div><div>7–8</div><div>8–9</div><div>9–10</div>
+        <div>10–11</div><div>11–12</div><div>12–13</div><div>13–14</div>
+      </div>
+      <div class="time-grid">
+        <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+        <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      </div>
     </div>
 
-    <!-- Siatka godzinowa 14–22 -->
-    <div class="grid-label">14–22</div>
-    <div class="grid">
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+    <!-- Blok godzinowy 14–22 -->
+    <div class="time-block">
+      <div class="time-header">
+        <div>14–15</div><div>15–16</div><div>16–17</div><div>17–18</div>
+        <div>18–19</div><div>19–20</div><div>20–21</div><div>21–22</div>
+      </div>
+      <div class="time-grid">
+        <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+        <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      </div>
     </div>
 
-    <!-- Siatka godzinowa 22–06 -->
-    <div class="grid-label">22–06</div>
-    <div class="grid">
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
-      <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+    <!-- Blok godzinowy 22–06 -->
+    <div class="time-block">
+      <div class="time-header">
+        <div>22–23</div><div>23–00</div><div>00–01</div><div>01–02</div>
+        <div>02–03</div><div>03–04</div><div>04–05</div><div>05–06</div>
+      </div>
+      <div class="time-grid">
+        <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+        <div class="cell"></div><div class="cell"></div><div class="cell"></div><div class="cell"></div>
+      </div>
     </div>
   </div>
 </body>
