--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Dashboard OEE</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #f4f4f4;
-      padding: 20px;
+      margin: 0;
+      padding: 10px;
       color: #333;
     }
 
     .container {
-      max-width: 1100px;
+      max-width: 100%;
       margin: auto;
       background: white;
-      padding: 20px;
+      padding: 10px;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
@@ -23,17 +25,14 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     th, td {
       border: 1px solid #ccc;
-      padding: 10px;
+      padding: 8px;
       text-align: center;
-    }
-
-    .green {
-      background-color: #e0f7e9;
+      font-size: 14px;
     }
 
     .red {
@@ -46,16 +45,18 @@
       padding: 6px;
       border-radius: 4px;
       border: 1px solid #ccc;
-      color: green;
-      font-weight: bold;
+      width: 100%;
+      max-width: 200px;
     }
 
     .time-block {
-      margin-bottom: 40px;
+      margin-bottom: 30px;
+      overflow-x: auto;
     }
 
     .time-table {
       width: 100%;
+      min-width: 600px;
       border-collapse: collapse;
     }
 
@@ -63,18 +64,31 @@
       background: #3498db;
       color: white;
       padding: 8px;
+      font-size: 13px;
     }
 
     .time-table td {
       border: 1px solid #ccc;
       padding: 15px;
-      background-color: #e0f7e9;
       height: 40px;
+      background-color: #fff;
     }
 
     .time-header th {
       text-align: center;
       font-weight: bold;
+    }
+
+    @media (max-width: 600px) {
+      th, td {
+        padding: 6px;
+        font-size: 12px;
+      }
+
+      .time-table th, .time-table td {
+        padding: 10px;
+        font-size: 12px;
+      }
     }
   </style>
 </head>
@@ -94,26 +108,26 @@
       </tr>
       <tr>
         <td><strong>zm</strong></td>
-        <td class="green">I</td>
-        <td class="green">II</td>
-        <td class="green">III</td>
+        <td>I</td>
+        <td>II</td>
+        <td>III</td>
         <td><strong>TOTAL</strong></td>
       </tr>
       <tr>
         <td><strong>OEE</strong></td>
-        <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
+        <td></td><td></td><td></td><td></td>
       </tr>
       <tr>
         <td><strong>OK</strong></td>
-        <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
+        <td></td><td></td><td></td><td></td>
       </tr>
       <tr>
         <td class="red">NOK</td>
-        <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
+        <td></td><td></td><td></td><td></td>
       </tr>
     </table>
 
-    <!-- Blok godzinowy -->
+    <!-- Blok godzinowy 6–14 -->
     <div class="time-block">
       <table class="time-table">
         <tr class="time-header">
@@ -121,16 +135,17 @@
           <th>10–11</th><th>11–12</th><th>12–13</th><th>13–14</th>
         </tr>
         <tr>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
+          <td></td><td></td><td></td><td></td>
+          <td></td><td></td><td></td><td></td>
         </tr>
         <tr>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
+          <td></td><td></td><td></td><td></td>
+          <td></td><td></td><td></td><td></td>
         </tr>
       </table>
     </div>
 
+    <!-- Blok godzinowy 14–22 -->
     <div class="time-block">
       <table class="time-table">
         <tr class="time-header">
@@ -138,16 +153,17 @@
           <th>18–19</th><th>19–20</th><th>20–21</th><th>21–22</th>
         </tr>
         <tr>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
+          <td></td><td></td><td></td><td></td>
+          <td></td><td></td><td></td><td></td>
         </tr>
         <tr>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
+          <td></td><td></td><td></td><td></td>
+          <td></td><td></td><td></td><td></td>
         </tr>
       </table>
     </div>
 
+    <!-- Blok godzinowy 22–06 -->
     <div class="time-block">
       <table class="time-table">
         <tr class="time-header">
@@ -155,12 +171,12 @@
           <th>02–03</th><th>03–04</th><th>04–05</th><th>05–06</th>
         </tr>
         <tr>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
+          <td></td><td></td><td></td><td></td>
+          <td></td><td></td><td></td><td></td>
         </tr>
         <tr>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
-          <td class="green"></td><td class="green"></td><td class="green"></td><td class="green"></td>
+          <td></td><td></td><td></td><td></td>
+          <td></td><td></td><td></td><td></td>
         </tr>
       </table>
     </div>
