--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
+      font-size: 12px;
     }
 
     th, td {
       border: 1px solid #ccc;
-      padding: 8px;
+      padding: 6px;
       text-align: center;
-      font-size: 14px;
     }
 
     .red {
@@ -41,36 +41,35 @@
     }
 
     select {
-      font-size: 16px;
-      padding: 6px;
+      font-size: 14px;
+      padding: 4px;
       border-radius: 4px;
       border: 1px solid #ccc;
       width: 100%;
-      max-width: 200px;
+      max-width: 150px;
     }
 
     .time-block {
-      margin-bottom: 30px;
-      overflow-x: auto;
+      margin-bottom: 20px;
     }
 
     .time-table {
       width: 100%;
-      min-width: 600px;
       border-collapse: collapse;
+      table-layout: fixed;
     }
 
     .time-table th {
       background: #3498db;
       color: white;
-      padding: 8px;
-      font-size: 13px;
+      padding: 6px;
+      font-size: 11px;
     }
 
     .time-table td {
       border: 1px solid #ccc;
-      padding: 15px;
-      height: 40px;
+      padding: 10px;
+      height: 30px;
       background-color: #fff;
     }
 
@@ -81,13 +80,13 @@
 
     @media (max-width: 600px) {
       th, td {
-        padding: 6px;
-        font-size: 12px;
+        padding: 4px;
+        font-size: 11px;
       }
 
       .time-table th, .time-table td {
-        padding: 10px;
-        font-size: 12px;
+        padding: 6px;
+        font-size: 10px;
       }
     }
   </style>
