--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       border-collapse: collapse;
       margin-bottom: 15px;
       font-size: 12px;
+      table-layout: fixed;
     }
 
     th, td {
@@ -46,7 +47,7 @@
       border-radius: 4px;
       border: 1px solid #ccc;
       width: 100%;
-      max-width: 150px;
+      max-width: 200px;
     }
 
     .time-block {
@@ -99,9 +100,17 @@
         <td><strong>DATA</strong></td>
         <td colspan="4">
           <select>
-            <option>I</option>
-            <option>II</option>
-            <option>III</option>
+            <option>NHL</option>
+            <option>MP4</option>
+            <option>Hood Latch</option>
+            <option>M4</option>
+            <option>H-Latch GŁÓWNA</option>
+            <option>H-Latch PIANA</option>
+            <option>139 P</option>
+            <option>139 T</option>
+            <option>SV3 A9</option>
+            <option>Pokrywki</option>
+            <option>Cardrige</option>
           </select>
         </td>
       </tr>
