--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
   <div class="container">
-    <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="Nagłówek pulpitu">
+    <img class="header-image" src="https://via.placeholder.com/1200x100.png?text=Nagłówek+Pulpitu+OEE" alt="Tu będize zajebiste logo ... Piasecki jest the best ;)  ">
 
     <table>
       <tr>
