--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
       padding: 6px;
       text-align: center;
     }
+    #dataValueCell {
+  font-size: 18px; /* Zwiększ rozmiar czcionki, możesz dostosować */
+  font-weight: bold; /* Opcjonalnie: pogrubienie */
+  color: #0056b3; /* Opcjonalnie: zmiana koloru */
+    }
     .red {
       color: red;
       font-weight: bold;
