--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       text-align: center;
     }
     #dataValueCell {
-  font-size: 18px; /* Zwiększ rozmiar czcionki, możesz dostosować */
+  font-size: 16px; /* Zwiększ rozmiar czcionki, możesz dostosować */
   font-weight: bold; /* Opcjonalnie: pogrubienie */
-  color: #0056b3; /* Opcjonalnie: zmiana koloru */
+  color: #070808; /* Opcjonalnie: zmiana koloru */
     }
     .red {
       color: red;
